<resources>
    <string name="app_name">Tu Suerte Horoscopo</string>
    <string name="title_main">Horóscopo</string>
    <string name="action_camara">Camara</string>
    <string name="action_ver">Ver</string>
    <string name="action_ayuda">Ayuda</string>
    <string name="action_ver_todos">Ver todos los signos</string>
    <string name="text_chino">Horóscopo Chino</string>
    <string name="title_chino">Horóscopo Chino</string>
    <string name="texto_ayuda_chino">Ingresar su año de nacimiento</string>
    <string name="title_activity_chino">Horóscopo Chino</string>
    <string name="text_btn_cam">Foto Editor</string>
    <string name="title_camara">Aquí aparecen las fotos…</string>
    <string name="title_activity_camara">Camara</string>
    <string name="title_activity_signo_chino">Oraculo</string>
    <string name="action_amor">Amor</string>
    <string name="action_salud">Salud</string>
    <string name="action_dinero">Dinero</string>
    <string name="action_enviar_sms">Enviar por SMS</string>
    <string name="action_enviar_email">Enviar por email</string>
    <string name="action_compartir">Compartir</string>
    <string name="action_otro_signo">Elegir otro signo</string>
    <string name="image_description_chino">Imagen de tu signo en el horóscopo Chino.</string>
    <string name="text_prediccion_amor_rata">En el amor, habrá grandes pasiones, aunque no estará garantizada la continuidad. Para los negocios, será indispensable mantener la mente fría y tomar recaudos.</string>
    <string name="text_prediccion_salud_rata">Salud y bienestar: Las caminatas, una buena alimentación, la relajación, asegurarán el bienestar.</string>
    <string name="text_prediccion_dinero_rata">Para los negocios, será indispensable mantener la mente fría y tomar recaudos.</string>
    <string name="text_prediccion_amor_serpiente">Las relaciones amorosas serán profundas, y la tendencia será a sentir una conexión interior, más que concentrarse en la pasión.</string>
    <string name="text_prediccion_salud_serpiente">Salud y bienestar: Aplicar automasajes diarios y respiración consciente, será ideal para evitar el estrés.</string>
    <string name="text_prediccion_dinero_serpiente">El plano económico exigirá prudencia, si así te manejas, la prosperidad será un hecho.</string>
    <string name="text_prediccion_amor_buey">El amor reclamará más tolerancia y apostar a la armonía.</string>
    <string name="text_prediccion_salud_buey">Salud y bienestar:Realizar actividades no competitivas, que sirvan para relajarte.</string>
    <string name="text_prediccion_dinero_buey">En los negocios, habrá buenas ganancias, siempre y cuando las decisiones se tomen con prudencia.</string>
    <string name="text_prediccion_amor_tigre">La vida amorosa será intensa, las uniones afectivas prometen ser duraderas, mientras que también habrá mucho movimiento en lo social, posibles mudanzas y viajes.</string>
    <string name="text_prediccion_salud_tigre">Salud y bienestar:Cuida tu alimentación, e incorpora hábitos placenteros: tomar un baño relajante, hacer una pausa para beber un té, etc.</string>
    <string name="text_prediccion_dinero_tigre">Con respecto al dinero, todo irá bien.</string>
    <string name="text_prediccion_amor_conejo">En el amor, será un momento para romper las reglas, y disfrutar más, dejándote llevar por las circunstancias, superando tu necesidad de control.</string>
    <string name="text_prediccion_salud_conejo">Salud y bienestar: La propensión al sedentarismo puede señalar una tendencia a subir de peso, habrá que cuidar la alimentación y practicar ejercicio físico.</string>
    <string name="text_prediccion_dinero_conejo">Hábil y estratega, habrá un interés por incorporar nuevos conocimientos para enfrentar un año algo difícil en la economía.</string>
    <string name="text_prediccion_amor_dragon">Para muchos, será momento de conocer al alma gemela.</string>
    <string name="text_prediccion_salud_dragon">Salud y bienestar: El exceso de emotividad, la impulsividad, pueden afectar el bienestar, es recomendable canalizar la sensibilidad de manera saludable.</string>
    <string name="text_prediccion_dinero_dragon">El plano del dinero se verá muy favorecido, habrá excelentes oportunidades, y el ímpetu característico del signo no las dejará pasar.</string>
    <string name="text_prediccion_amor_caballo">Enamorado de la vida, querrás hacerlo todo, pero habrá una tendencia a la dispersión, y eso será difícil de entender para las personas que te rodean.</string>
    <string name="text_prediccion_salud_caballo">Con respecto al dinero y la profesión, muchas oportunidades de cambio, ya se trate de emprendimientos independientes, viajes, ascensos, etc.</string>
    <string name="text_prediccion_dinero_caballo">Salud y bienestar: Las múltiples tareas podrían quitar mucha energía, debes mantener tus actividades bien organizadas, para protegerte del agotamiento.</string>
    <string name="text_prediccion_amor_cabra">El plano afectivo estará muy renovado, con nuevas relaciones, algunas amorosas, otras, amistades muy profundas. La pareja gozará de gran intimidad. </string>
    <string name="text_prediccion_salud_cabra">Salud y bienestar: Un período exigente para la salud, los nervios podrían afectar el sistema digestivo, por lo cual será importante concentrarse en una alimentación saludable.</string>
    <string name="text_prediccion_dinero_cabra">También será un año favorable para los negocios y la economía en general, aunque será aconsejable buscar asesoramiento.</string>
    <string name="text_prediccion_amor_mono">Las relaciones amorosas irán por buen camino si dejas de lado el egocentrismo y aprendes a compartir, y no competir.</string>
    <string name="text_prediccion_salud_mono">Salud y bienestar: El desafío será moderar el ego, evitar querer ser el centro. Descargar la energía sobrante será un buen comienzo.</string>
    <string name="text_prediccion_dinero_mono">Habrá excelentes oportunidades en la profesión, una tendencia a ampliar los horizontes, y estudiar nuevas carreras, o dedicarse a la enseñanza.</string>
    <string name="text_prediccion_amor_gallo">Compartir más con la pareja, con los seres queridos, brindará muchas satisfacciones para el corazón.</string>
    <string name="text_prediccion_salud_gallo">Salud y bienestar: Emprende alguna actividad artística en la que puedas expresar tu sensibilidad.</string>
    <string name="text_prediccion_dinero_gallo">Con respecto a la economía y el trabajo, se destacará la inteligencia, la creatividad, y el trabajo de acuerdo con otros.</string>
    <string name="text_prediccion_amor_perro">Será un año de más conciliaciones que desacuerdos en el amor.</string>
    <string name="text_prediccion_salud_perro">Salud y bienestar: Realizar alguna actividad humanitaria te brindará armonía interior, hacer feliz a otros te traerá alegrías.</string>
    <string name="text_prediccion_dinero_perro">Surgirán nuevas oportunidades en la profesión, asociarse con allegados afines brindará prosperidad.</string>
    <string name="text_prediccion_amor_cerdo">Aprender a ser más independiente será un desafío, tendrás que animarte a dejar atrás estructuras o dependencias afectivas que ya no sirven.</string>
    <string name="text_prediccion_salud_cerdo">Salud y bienestar: Ante un año de mucha actividad, será ideal recuperar la energía natural por medio de terapias alternativas.</string>
    <string name="text_prediccion_dinero_cerdo">La habilidad para los negocios se verá incrementada, al igual que la capacidad para ver qué proyecto conviene, y cuál no.</string>
    <string name="text_zodiaco">Horóscopo Zodíaco</string>
    <string name="title_zodiaco">Horóscopo Zodíaco</string>
    <string name="title_activity_zodiaco">Horóscopo Zodíaco</string>
    <string name="texto_btn_calcular">Calcular</string>
    <string name="texto_ayuda_zodiaco_mes">Mes de nacimiento</string>
    <string name="texto_ayuda_zodiaco">Día de nacimiento</string>
    <string name="image_description_zodiaco">Imagen de tu signo del Zodíaco</string>
    <string name="title_activity_oraculo_zodiaco">Oraculo</string>
    <string name="action_settings">Settings</string>
    <string name="btn_historia">Historia</string>
    <string name="btn_traer_historia">Traer Historia</string>
    <string name="aries_amor">2014 será un buen año para los Aries desde el punto de vista sentimental. Los nacidos entre el 22 de marzo y el 21 de abril estarán cargados de sensualidad durante los próximos meses. No hay que desperdiciarlo, porque puede suponer la llegada de compromisos amorosos e inclusos embarazos.
    A partir del segundo trimestre la energía que invade a los Aries abarcará también su sensualidad, que alcanzará su punto álgido durante la temporada estival. Es una buena época para dar rienda suelta a sus instintos y disfrutar con plenitud de su sensualidad.
    Si ya se tiene pareja 2014 será un buen año para hacer una escapada romántica, que pudiera ser una luna de miel. También es un buen momento, según el horóscopo, para plantearse tener un hijo. La sensualidad que desprenden los Aries viene acompañada de fertilidad. Por el contrario, si no tiene pareja podrían darse todas las circunstancias necesarias para que viva un interesante romance que no tiene porqué terminar en una relación estable.</string>
    <string name="aries_salud">A pesar de que en el horóscopo de Aries las cosas parecen pintar bien también pueden surgir problemas, especialmente en el aspecto sanitario, por lo que conviene cuidarse un poco más. Con tanta energía y ganas de disfrutar se deja de prestar atención a la salud y uno puede no preocuparse tanto como debiera. Enfermedades pulmonares son las que podrían poner en jaque a los Aries, sobre todo en la segunda mitad del año 2014.
    Especial atención deberán tener aquellos que fuman con asiduidad, porque son más vulnerables ante una dolencia pulmonar. Si estáis pensando en nuevos propósitos de cara al arranque de 2014 dejar el tabaco puede ser una buena idea. Lo es siempre, pero aún más si cabe en el próximo año. Nunca está de más, tampoco, ponerse en forma y practicar ejercicios cardiovasculares.
    Además, los cambios a los que se puede enfrentar el Aries pueden llegar a jugarle una mala pasada. A mediados de años puede sufrir un episodio de ansiedad que requiera de asistencia médica. Es un indicador de que tiene que frenar la velocidad y tomarse las cosas con calma. También es un buen momento para cogerse unas vacaciones tranquilas.
    El horóscopo vaticina muchos cambios, en su mayor parte positivos, para los Aries en el próximo 2014. Será un año para brillar con luz propia después de que el anterior se hubiera caracterizado por cierto abatimiento. Pero los éxitos hay que saber gestionarlos del modo más correcto para que no se vuelvan en contra, porque parece que vendrán relacionados con conflictos.</string>
    <string name="aries_dinero">El horóscopo apunta a que 2014 será un buen año financiero para los Aries, que podrían encontrarse de repente con un dinero extra que no vendría nada mal. También deben tener cuidado porque eso puede suponer invertirlo en un negocio no demasiado claro o despilfarrarlo en otra clase de actividades. El dinero tan pronto como llega se va, así que hay que tener la cabeza fría para pensar en qué se va a invertir y evitar preocupaciones.
    El dinero extra que llegará según el horóscopo puede estar relacionado con el mercado inmobiliario. Si se plantea vender su casa le harán interesantes propuestas que pueden acabar con un cambio de domicilio.</string>
</resources>