<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="la.funka.apphoroscopo.ChinoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_zodiaco"
            android:id="@+id/title_zodiaco"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#09455C"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="number"
                android:layout_marginBottom="16dp"
                android:id="@+id/input_dia_zodiaco"
                android:layout_gravity="center"
                android:hint="@string/texto_ayuda_zodiaco"
                android:textColor="#09455C"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="number"
                android:layout_marginBottom="16dp"
                android:id="@+id/input_mes_zodiaco"
                android:layout_gravity="center"
                android:hint="@string/texto_ayuda_zodiaco_mes"
                android:textColor="#09455C"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_btn_calcular"
            android:id="@+id/btn_calcular_zodiaco"
            android:layout_gravity="center"
            android:background="@drawable/button"
            style="@style/buttonStyle"/>

    </LinearLayout>

</RelativeLayout>
