<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="la.funka.apphoroscopo.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:text="@string/title_main"
            android:textColor="#09455C" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_chino"
            android:id="@+id/btn_chino"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            style="@style/buttonStyle"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_zodiaco"
            android:id="@+id/btn_zodiaco"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            style="@style/buttonStyle"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_historia"
            android:id="@+id/btn_historia"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            style="@style/buttonStyle"/>

        <!--
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_cam"
            android:id="@+id/btn_cam_activity"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            style="@style/buttonStyle"/>
            -->

    </LinearLayout>
</RelativeLayout>
